<resources>
    <string name="app_name">BrownMusicH</string>
    <string name="title_home">Home</string>
    <string name="title_allSongList">Playlist</string>
    <string name="title_settings">Settings</string>
    <string name="check_storage_permission">Check Storage Permission</string>
    <string name="permission_granted">Permission granted</string>
    <string name="permission_not_granted">Permission NOT granted</string>
    <string name="asking_permission">Asking permission</string>
    <string name="ask_permission">Ask Permission</string>
    <string name="title_permission">Permission</string>
    <string name="give_storage_permission">Give Storage Permission</string>
    <string name="switch_storage_permission_on">MusicPlayer has obtained storage permission</string>
    <string name="switch_storage_permission_off">MusicPlayer must obtain storage permission to find and play music. Turning on this option will request to read external storage permission</string>
    <string name="example">Example</string>
    <string name="title_play">Play</string>
    <string name="title_playsettings">Play Settings</string>
    <string name="mainfolder">Main Folder</string>
    <string name="isMoveMusic">Move music to main folder</string>
    <string name="isMoveMusic_summary">After opening, the music and lyrics files in the newly scanned directory will be automatically copied to the main folder</string>
    <string name="title_about">About</string>
    <string name="aboutApp">About MusicPlayer</string>
    <string name="check_layer_permission">Check Layer Permission</string>
    <string name="give_layer_permission">Give Layer Permission</string>
    <string name="switch_layer_permission_off">MusicPlayer needs the permission of floating window to display the lyrics on the desktop</string>
    <string name="switch_layer_permission_on">MusicPlayer has obtained floating window permission</string>
    <string name="isShowLyric">Show Desktop Lyric</string>
    <string name="isShowLyric_summary">This settings need overlay permision</string>
    <string name="appInfo">This software is developed by the linux team. \\nProject address: https://github.com/Brownlzy/MusicPlayer \\nCurrent version:</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="inverse">Inverse</string>
    <string name="select_all">Sellect All</string>
    <string name="addSongs">Add Songs</string>
    <string name="addFolder">Add Folder</string>
    <string name="editList">Edit List</string>
    <string name="confirmDelete">Sure to delete?</string>
    <string name="deleteInfo">This operation will not delete the corresponding music file.</string>
    <string name="item_menu_moreInfo">Show Details</string>
    <string name="title_debug">Debug</string>
    <string name="play_error">Error</string>
    <string name="play_err_Info">An error occurred while preparing to play! The file may not exist or the music player storage permission is not granted. Please go to the settings page to set it.</string>
    <string name="gotoAppDetails">Go To AppDetails</string>
    <string name="playPrev">Play Previous</string>
    <string name="pauseOrPlay">Pause Or Play</string>
    <string name="playNext">Play Next</string>
    <string name="playOrder">Play Order</string>
    <string name="give_permission">Give Permision</string>
    <string name="fileInfo">File Information:</string>
    <string name="nowId">Current Playing</string>
    <string name="title_album">"Album : "</string>
    <string name="title_path">"FilePath : "</string>
    <string name="title_filename">"Filename : "</string>
    <string name="title_lyric">"LyricPath : "</string>
    <string name="item_menu_play">Play</string>
    <string name="repeat_list">Repeat List</string>
    <string name="repeat_one">Repeat One</string>
    <string name="shuffle_play">Shuffle Play</string>
    <string name="list_play">List Play</string>
    <string name="WebPlayListUrl">Web Playlist Url</string>
    <string name="isUseWebPlayList">Use Web Playlist</string>
    <string name="isUseWebPlayList_summary">Use playlists from network links</string>
    <string name="title_webPlayList">Web Playlist</string>
    <string name="title_duration">"Duration : "</string>
    <string name="title_mimetype">"MimeType : "</string>
    <string name="title_bitrate">"Bitrate : "</string>
    <string name="item_menu_edit">EditInfo</string>
    <string name="no_permission">No Permission</string>
    <string name="no_permission_info">The music player needs storage permission to read music files under the folder and generate playlists. You cannot add music to the playlist until you go to the settings page to allow application and obtain storage permission.</string>
    <string name="item_btn_more">More</string>
    <string name="exitApp">Exit MusicPlayer</string>
    <string name="nowPlaying">"NowPlaying: "</string>
    <string name="lyricFileIsEmpty">Lyric File is Empty</string>
    <string name="deskLyricLock">Lock DeskLyric</string>
    <string name="addAllMusic">Add ALL Music</string>
    <string name="addAllMusic_info">This option is to add all audio files in the local media library to the playlist. Some audio files that are not music may be added to the music library. If you know where your music files are stored, use the Add Folder button next to this button to add music in the specified folder.</string>
    <string name="file_size">"File Size: "</string>
    <string name="title_artist">"Artist: "</string>
    <string name="timing">Timing</string>
    <string name="timing_summary">Set the playback countdown in minutes</string>
    <string name="experiment">Experiment</string>
    <string name="newAppearance">Blur Theme</string>
    <string name="newAppearance_summary">Enable this option to turn on album picture blur background</string>
    <string name="title_cacheList">Cache List</string>
    <string name="title_checkUpdate">CheckUpdate</string>
    <string name="title_update">Software Update</string>
    <string name="title_lastVersion">"Last Version: "</string>
    <string name="title_changlog">Chang Log: </string>
    <string name="update">Update</string>
    <string name="title_size">"Package Size: "</string>
    <string name="notification_downloading_latest_version">Downloading Latest Version</string>
    <string name="title_crashed">Oops, I\'m crashed!</string>
    <string name="crashed_info">Just now, under the influence of a mysterious force, I collapsed! Now I need your cooperation to help me fight back! Fortunately, I have recorded the whereabouts of the enemy. Click below to send an error report and wait for my good news!</string>
    <string name="send_error_log">Send Error Log</string>
    <string name="lastErrorLog">Send Last Error Log</string>
    <string name="lastCrash">Last Crash</string>
    <string name="gotoSettings">Goto Settings</string>
    <string name="crashMe">Crash Test</string>
    <string name="title_name">"Title: "</string>
    <string name="title_playing_list">Playing List</string>
    <string name="currentPlaying">CurrentPlaying</string>
    <string name="item_menu_next_play">NextPlay</string>
    <string name="item_menu_delete">Delete</string>
    <string name="title_user">User</string>
    <string name="user_unlogin">Unlogin</string>
    <string name="totalCount">total %d songs</string>
    <string name="sort_title_up">Sort by title up</string>
    <string name="sort_title_down">Sort by title down</string>
    <string name="sort_artist_up">Sort by artist up</string>
    <string name="sort_album_up">Sort by artist up</string>
    <string name="sort_artist_down">Sort by artist down</string>
    <string name="sort_album_down">Sort by album down</string>
    <string name="rsa_public_key">RSA Public Key</string>
    <string name="rsa_decode_test">RSA Decode Test</string>
    <string name="rsa_encode_test">RSA Encode Test</string>
    <string name="rsa_private_key">RSA Private Key</string>
    <string name="user_logined">Logined</string>
    <string name="logout">Log out</string>
    <string name="sure">Confirm</string>
    <string name="sure_to_logout">Confirm to Logout?</string>
    <string name="userName">"User Name : "</string>
    <string name="userLevel">"User Level : "</string>
    <string name="loginTime">"Login Time : "</string>
    <string name="expiredTime">ExpiredTime : </string>
    <string name="inputUserName">Input your username</string>
    <string name="copyToRegister">Copy this and Send to me</string>
    <string name="notification_downloading_splash_pic">Downloading Splash Picture</string>
    <string name="title_rsa">RSA</string>
    <string name="newsBoard">News</string>
    <string name="readed">I have readed</string>
    <string name="isNeedFastStart">Fast Start</string>
    <string name="isNeedFastStart_summary">Reduce screen opening page impression time</string>
    <string name="allSongList">All Songs</string>
    <string name="inputListName">Input Songlist Name</string>
    <string name="songlist_summary">A total of %d songs</string>
    <string name="sort_time_up">Sort by time up</string>
    <string name="sort_time_down">Sort by time down</string>
    <string name="sort_name_up">Sort by name up</string>
    <string name="sort_name_down">Sort by name down</string>
    <string name="sort_amount_up">Sort by amount up</string>
    <string name="sort_amount_down">Sort by amount down</string>
    <string name="manual_download">Manual Download</string>
    <string name="title_nowVersion">Now Version: </string>
    <string name="autoRun">Auto Run</string>
    <string name="autoRun_summary">To avoid the system killing the background playback service, you need to set the music player to be manually managed and allow background permission.</string>
    <string name="newUser">Add User</string>
    <string name="webAllSongList">Web List</string>
    <string name="clearCache">Clear Cache</string>
    <string name="title_activity_open_music_file">OpenMusicFile</string>
    <string name="Copied">Copied: </string>
    <string name="item_menu_add_to_list">Add to List</string>
    <string name="isUseMetaData">Use Metadata</string>
    <string name="isUseMetaData_summary">The metadata of the music file takes precedence in the details card of the playback page</string>
    <string name="fileMetaDataInfo">"Metadata Information:"</string>
    <string name="title_custom">Custom</string>
    <string name="copyright" translatable="false">Copyright © 2022-2023 Brownlzy. All Rights Reserved.</string>
    <string name="officialWebsite">Official Website</string>
    <string name="supportMe">Support Me</string>
    <string name="showDebug">Show Debug Settings</string>
    <string name="findNewVersion">"Found New Version: "</string>
    <string name="sure_to_exit">Sure to End Playing and Exit?</string>
    <string name="changeLog">Change Log</string>
    <string name="openSource">Open Source</string>
    <string name="changeLogLink"><a href="">ChangeLog</a></string>
    <string name="openSourceLink"><a href="">OpenSource</a></string>
    <string name="login">Log in</string>
    <string name="register">Sign up</string>
    <string name="joinTime">"Join Time : "</string>
    <string name="WebSplashPic">Image From Account</string>
    <string name="LocalCustomPic">Image From Local Custom</string>
    <string name="splashType">Splash Type</string>
    <string name="splashPicPath">Custom Splash Image</string>
    <string name="viewSplashPic">View Splash Image</string>
    <string name="no_permission_info_2">Storage permission is required to read the picture of your choice</string>
    <string name="loginSignUp">Login or SignUp</string>
    <string name="clearLocalSplash">Clear Local Splash Image</string>
    <string name="splashChoose">Choose Splash Image Source</string>
    <string name="contactMe"><a href="mailto:brownlzy@outlook.com">Contact Me</a></string>
</resources>