<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/edit_info"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/alertBackFrame">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="22dp"
        android:layout_marginTop="10dp"
        style="@style/alertBackFrame">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_name" />

            <EditText
                android:id="@+id/newTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_artist" />

            <EditText
                android:id="@+id/newArtist"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_album" />

            <EditText
                android:id="@+id/newAlbum"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:singleLine="true" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_path" />

            <EditText
                android:id="@+id/oldPath"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title_lyric" />

            <EditText
                android:id="@+id/newLyric"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp">

            <TextView
                android:id="@+id/dialog_button_cancel"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_height="match_parent"
                android:text="@string/cancel" />

            <View
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <TextView
                android:id="@+id/dialog_button_confirm"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:gravity="center"
                android:background="?android:attr/selectableItemBackground"
                android:clickable="true"
                android:layout_height="match_parent"
                android:text="@string/confirm" />
        </LinearLayout>

    </LinearLayout>
</LinearLayout>