<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.AboutActivity">
    <RelativeLayout
        android:id="@+id/tabLayout"
        style="@style/TabBarStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="start|center_vertical"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/tabText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="10dp"
            android:text="@string/title_about"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tabDebugText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="15dp"
            android:layout_marginBottom="10dp"
            android:text="DEBUG"
            android:visibility="gone"
            tools:visibility="visible"
            android:textColor="@color/white"
            android:textSize="18sp" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/tabLayout"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="0dp"
        android:src="@mipmap/ic_launcher" />
<LinearLayout
    android:orientation="vertical"
    android:gravity="center"
    android:id="@+id/appname"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_below="@+id/imageView"
    android:layout_marginTop="20dp"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/imageView">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/app_name"
        android:textSize="24sp" />
    <TextView
        android:id="@+id/versionName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:text="Version X.X.XX"/>
</LinearLayout>

    <RelativeLayout
        android:id="@+id/fragment_container"
        android:name="com.liux.musicplayer.ui.AboutFragment"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_above="@+id/bottomBar"
        android:layout_below="@+id/appname"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:id="@+id/bottomBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">
        <LinearLayout
            android:layout_width="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/changeLog"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:layout_marginEnd="5dp"
                android:text="@string/changeLogLink"/>
            <TextView
                android:id="@+id/openSource"
                android:layout_marginStart="5dp"
                android:clickable="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/openSourceLink"/>
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright"/>
    </LinearLayout>

</RelativeLayout>